# Onedegree_Cam_Sensor

./: .gitignore  CMakeLists.txt  Readme.md  mqtt_client.py  partitions.csv  requirement.txt  sdkconfig.defaults  server.py
main/: CMakeLists.txt  camera_drv.c  camera_drv.h  idf_component.yml  main.c  veml7700_drv.c  veml7700_drv.h
main/ota/: ota.c  ota.h
main/wifi_prov/: wifi_prov.c
